Fix text overflow on index (#125)
* Fix text overflow on index

* Use min instead of max

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -136,7 +136,7 @@ font-feature-settings()
 	.feature
 		text-align center
 		p
-			height 5em
+			min-height 4em
 		img
 			max-height 28em
 			max-width 100%
